<resources>
    <string name="app_name">Weston Campbell Inventory App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="add_item">Add Item</string>
    <string name="new_user">New User? Register here:</string>
    <string name="inventory_app">Inventory App</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_edit">Edit</string>
    <string name="title_settings">Settings</string>
    <string name="title_edit_form">Edit Form</string>
    <string name="alert">Out Of Stock Alerts</string>
    <string name="hat_name">Hard Hats</string>
    <string name="hat_desc">Standard Issue Hard Hats</string>
    <string name="no_out_of_stock">No items out-of-stock.</string>
</resources>